# go-pre-commit-hooks

./: .pre-commit-hooks.yaml  setup.cfg
hooks/: check_go_version.py
pre_commit_hooks/: check_go_version.py  check_licence_header.py
